--- a/index.css
+++ b/index.css
@@ -9,8 +9,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: auto;
-  background: url(./src/img/BG.jpg) no-repeat;
+  height: 4235px;
+  background: url(./src/img/BG.jpg) no-repeat center;
   background-size: cover;
 }
 
